# r2b2

./: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  nocache-github  package.xml  setup.cfg  setup.py  t
.devcontainer/: devcontainer.json
cli/: common.sh
cli/b2-nuc8/: env  push_repos.sh
cli/run/: all.sh  stop_all.sh
config/devtools/: config.rviz  main.perspective
config/map/: b2-downstairs4.pgm  b2-downstairs4.yaml  gz_map.pgm  gz_map.xcf  gz_map.yaml
config/params/: _nav2_params.yaml_  ekf.yaml  nav2_params.humble.yaml  nav2_params.yaml  nav2_params.yaml.humble
config/urdf/: r2b2.xacro
gazebo/config/: gui.config  gz_bridge.params.yaml
gazebo/models/: walls.sdf  walls.xacro
gazebo/run/: downstairs.sh  gen_sdf.sh  spawn_robot.sh
gazebo/worlds/: building_robot.sdf  downstairs.sdf  megacavern.sdf  mesh-test.sdf
hosts/: README.md
hosts/b2-nuc8/: cyclonedds.xml
hosts/jaguar/: cyclonedds.xml
hosts/lap-cat/: cyclonedds.xml
hosts/nine-lives/: cyclonedds.xml
hosts/old-cat/: cyclonedds.xml
hosts/ros2-compute/: cyclonedds.xml
hosts/ros2-dev/: README.md  cyclonedds.xml
launch/: base-stub.launch.yaml  base.launch.yaml  compute.launch.yaml  display.launch.yaml  launch_notes.txt  r2b2.launch.py  realsense.launch.yaml  roboclaw-only.launch.yaml  sim.launch.py  stub.launch.py
launch/nav2/: bringup_launch.py  localization_launch.py  navigation_launch.py  slam_launch.py
r2b2/: detect.ipynb  object_detector_node.py
ros2-dev/config/: _urdf.rviz  config.rviz
run/: build.sh  tests.sh
scripts/: push_repos.sh
(+32 files in other folders)
