<?xml version="1.0"?>
<package format="2">
  <name>r2b2</name>
  <version>2.0.0</version>
  <description>The R2B2 robot package</description>
  <maintainer email="sheaffej@gmail.com">sheaffej</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>ros2launch</depend>

  <!-- Lookup Python packages here: https://github.com/ros/rosdistro/blob/master/rosdep/python.yaml -->
  <depend>python3-flake8</depend>

  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-cov</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
